--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
-        }
+        },
+        "files": [
+            "src/Cli.php"
+        ]
     },
     "authors": [
         {
@@ -14,7 +17,8 @@
     ],
     "license": "MIT",
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-even"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.11.22"
