--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
             "src/Games/BrainCalc.php",
             "src/Games/BrainGcd.php",
             "src/Games/BrainProgression.php",
-            "src/Utils/Gcd.php"
+            "src/Games/BrainPrime.php",
+            "src/Utils/Gcd.php",
+            "src/Utils/IsPrime.php"
         ]
     },
     "authors": [
@@ -27,7 +29,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.11.22"
